--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/joan": "^4.5.0",
+    "@fontsource/roboto-condensed": "^4.5.8",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
