--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/joan": "^4.5.0",
     "@fontsource/montserrat": "^4.5.11",
     "@fontsource/roboto-condensed": "^4.5.8",
+    "@shopify/shopify-api": "^3.1.3",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
